--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -7,7 +7,7 @@
     }
 }
 //all button styles
-$btn: rgb(0, 38, 255); //btn background color
+$btn: rgba(68, 68, 68, 0.808); //btn background color
 
 .btn {
     @extend %btn !optional;
@@ -16,6 +16,8 @@ $btn: rgb(0, 38, 255); //btn background color
 .btn {
     background: $btn;
     color: set-text-color($btn);
+    border: 1px solid rgba(233, 233, 233, 0.808);
+    border-radius: 5px;
 }
 // main background
 $background: rgba(204, 204, 204, 0.575); // background color
@@ -40,7 +42,7 @@ $background: rgba(204, 204, 204, 0.575); // background color
 
 /* universal */
 body {
-    background: rgba(245, 244, 244, 0.89);
+    background: rgba(239, 239, 240, 0.979);
   }
   
   .list-group-item {
@@ -48,6 +50,9 @@ body {
   }
   .clear{
     margin-right: 5px;
+  }
+  .navBtns {
+    margin-left: 5px;
   }
   h2 {
     margin-top: 0px;
@@ -58,11 +63,29 @@ body {
     margin-top: 10px;
   }
   .header-background{
-    background-color: rgba(255, 255, 255, 0.644);
+    background: rgba(68, 68, 68, 0.808);
     border-radius: 5px;
-    border: 1px solid rgba(109, 109, 109, 0.808);
+    border: 3px solid rgba(233, 233, 233, 0.808);
     max-width: 35vw;
   }
+  .splash-bg {
+    background: url('../../images/chef-hands-steak-plate.jpg') no-repeat center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 75vh;
+    margin: 30px;
+    border: 5px solid rgba(109, 109, 109, 0.808);
+    border-radius: 5px;
+  }
+  
+  // .splashBtns {
+  //   background: rgba(68, 68, 68, 0.808);
+  //   border: 1px solid rgba(233, 233, 233, 0.808);
+  //   border-radius: 5px;
+  // }
+
   .jumbo {
     background: url('../../images/market-601580_1280.jpg') no-repeat center fixed;
     -webkit-background-size: cover;
@@ -90,8 +113,8 @@ body {
     background-color: rgb(62, 62, 255) !important;
   }
   #logOut {
-    margin-top: 60px;
-    margin-bottom: 10px;
+   
+    margin: 10px;
   }
   .top-back {
     margin-top: 10px;
@@ -113,7 +136,7 @@ body {
     padding-top: 20px;
   }
   
-  .login-submit {
+  .submit {
    margin-bottom: 20px;
   }
   
