--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -1,4 +1,4 @@
-<div id='home'>
+<div id='order'>
   <div>
     {{> header}}
   </div>
@@ -74,11 +74,8 @@
               </tbody>
             </table>
             </div>
-            <br>
-            <div>
-              <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
-              {{> navbuttons}}
-            </div>
+            <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
+            {{> navbuttons}}
           </div>
         </div>
       </div>
