--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <div class='jumbo valign-wrapper'>
   <div class='container header-background'>
-    <h2 class='black-text center header'>Dynamite Kitchen Supplier</h2>
+    <h2 class='grey-text text-lighten-2 center header'>Dynamite Kitchen Supplier</h2>
   </div>
 </div>
