--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<div id='home'>
+<div id='signup'>
   <div>
     {{> header}}
   </div>
@@ -58,7 +58,8 @@
                 <label for="password">Password</label>
               </div>
             </div>
-            <button id='submit' type='submit' class='btn btn-primary right signup-submit' value='Sign Up'>Sign Up</button>
+            <button id='submit' type='submit' class='btn btn-primary right submit' value='Sign Up'>Sign Up</button>
+            <a id='back' class='btn btn-primary right'href='/'>Back</a>
           </form>
         </div>
       </div>
