--- a/views/partials/navbuttons.handlebars
+++ b/views/partials/navbuttons.handlebars
@@ -1,7 +1,7 @@
  {{!-- if user is a supervisor these buttons will render for navigation --}}
 <div class='row'>
 	{{#if role}}
-	<ul id='product-list' class='list-group'>
+	<ul id='nav-buttons' class='list-group navBtns'>
 		<li>
 			<a class='btn btn-primary ordersPage' href='/basicuser'>Products</a>
 			<a class='btn btn-primary ordersPage' href='/order'>Orders</a>
