--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,4 +1,4 @@
-<div id='home'>
+<div id='user'>
     <div>
         {{> header}}
     </div>
@@ -6,7 +6,7 @@
         <div class='background z-depth-3'>
             <div class='row padIt'>
                 <div class='col-8 offset-2'>
-                    <button id='back' class='btn btn-primary right top-back'><a href='/basicuser'>Back</a></button>
+                    <a id='back' class='btn btn-primary right top-back' href='/basicuser'>Back</a>
                     <h5>Users</h5>
                     <table class='highlight'>
                         <tbody data-id='{{this.id}}' class='list-group-item'>
@@ -37,10 +37,10 @@
                             {{/each}}
                         </tbody>
                     </table>
-                   
-                    <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
-                    {{> navbuttons}}
+
                 </div>
+                <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
+                {{> navbuttons}}
             </div>
         </div>
     </div>
