--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -76,8 +76,11 @@
             </tbody>
           </table>
         </div>
-        <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
-        {{> navbuttons}}
+        <div class='row'>
+          <div class='nav-style'>
+            {{> navbuttons}}
+          </div>
+        </div>
       </div>
     </div>
   </div>
