--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,13 +10,13 @@
             <div class="input-field col s12">
               <i class="material-icons prefix">account_circle</i>
               <input id="usName" type="text" class="validate" name='username'/>
-              <label for="username">First and Last Name (i.e. John Doe)</label>
+              <label for="username">John Doe</label>
             </div>
             <div class="row">
                 <div class="input-field col s6">
                     <i class="material-icons prefix">phone</i>
                     <input id="phoneNumber" type="text" class="validate" name='phoneNumber'/>                    
-                    <label for="phoneNumber">Phone Number (xxx-xxx-xxx)</label>
+                    <label for="phoneNumber">xxx-xxx-xxx</label>
                 </div>
                 <div class="input-field col s6">
                     <i class="material-icons prefix">email</i>
