--- a/views/underpar.handlebars
+++ b/views/underpar.handlebars
@@ -31,8 +31,11 @@
 					{{/each}}
 				</tbody>
 			</table>
-			<a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
-			{{> navbuttons}} 
+		</div>
+		<div class='row'>
+			<div class='nav-style'>
+				{{> navbuttons}}
+			</div>
 		</div>
 	</div>
 </div>
