--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -56,6 +56,9 @@
         <div>
           {{!-- table for search to render --}}
           <table class='highlight'>
+            <div class='progress1 z-depth-10'>
+              <div class="indeterminate1"></div>
+            </div>
             <thead id='product-list' class='list-group'>
               <tr>
                 <th>Name</th>
