--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -63,7 +63,9 @@
               <tr>
                 <th>Name</th>
                 <th class='center-align'>Category</th>
-                <th class='center-align'>Quantity</th>
+                <th class='center-align'>In Stock</th>
+                <th class='center-align'>Par</th>
+                <th></th>
                 <th class='center-align'>Add</th>
               </tr>
             </thead>
@@ -73,7 +75,13 @@
                 <td>{{this.prodName}}</td>
                 <td class='center-align'>{{this.prodCategory}}</td>
                 <td class='center-align'>{{this.prodOnHand}}</td>
-                <td class='center-align'>{{> addOne}}</td>
+                <td class='center-align'>{{this.prodPAR}}</td>
+                <td>{{this.prodUnitofIssue}}</td>
+                <td class='center-align'>
+                  <button data-target='addProduct{{this.id}}' class='btn-floating btn-small red modal-trigger'>
+                    <i class='material-icons'>add</i>
+                  </button>
+                </td>
               </tr>
               {{/each}}
             </tbody>
