--- a/views/partials/addProduct.handlebars
+++ b/views/partials/addProduct.handlebars
@@ -5,31 +5,22 @@
                 <thead id='product-list' class='list-group'>
                     <tr>
                         <th>Name</th>
-                        {{!-- <th>Category</th> --}}
                         <th>Amount to Order</th>
-                        {{!-- <th></th> --}}
-                        {{!-- <th>Add</th> --}}
                     </tr>
                 </thead>
                 <tbody data-id='{{this.id}}' class='list-group-item'>
                     <tr>
                         <td>{{this.prodName}}</td>
-                        {{!-- <td>{{this.prodCategory}}</td> --}}
                         <td class="input-field col s10">
                             <input id="amtOrder" type="number" class="validate center-align">
-                            {{!-- <label for="first_name2">Amount to Order</label> --}}
                         </td>
                         <td>{{this.prodUnitofIssue}}</td>
-                        {{!-- <td>{{> addOne}}</td> --}}
                     </tr>
                 </tbody>
                 <thead id='subProduct-list' class='list-group'>
                     <tr>
                         <th class='center-align'>Product on Hand</th>
-                        {{!-- <th>Category</th> --}}
                         <th class='center-align'>Product PAR</th>
-                        {{!-- <th></th> --}}
-                        {{!-- <th>Add</th> --}}
                     </tr>
                 </thead>
                 <tbody data-id='{{this.id}}' class='list-group-item'>
@@ -44,7 +35,7 @@
 
     </div>
     <div class="modal-footer">
-        <a href='#!' class='modal-close waves effect waves-green btn-flat'>Submit</a>
+        <a href='#!class='center-align'' class='modal-close waves effect waves-green btn-flat'>Submit</a>
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
