--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -38,12 +38,14 @@ $background: rgba(204, 204, 204, 0.575); // background color
 
 // modal style
 .modal {
-  min-width: 85vw;
+  min-width: 20vw;
   border: rgb(174, 174, 247) solid 5px;
   border-radius: 5px;
   font-size: 15px;
 }
-
+.modal .modal-content {
+  padding: 0px;
+}
 /* universal */
 body {
   background: rgba(239, 239, 240, 0.979);
@@ -84,7 +86,7 @@ h5 {
   -o-background-size: cover;
   background-size: cover;
   min-height: 75vh;
-  margin: 30px;
+  margin-top: 30px;
   border: 5px solid rgba(109, 109, 109, 0.808);
   border-radius: 5px;
 }
@@ -98,7 +100,7 @@ h5 {
 
   .splash-bg {
     min-height: 75vh;
-    min-width: 65vw;
+    min-width: 80vw;
   }
 
   .header-background {
@@ -180,18 +182,17 @@ tr {
 }
 
 .progress {
-    max-width: 35vh;
-    display: none;
-    display: flex !important;
-    align-items: start;
-    position: absolute !important;
-    z-index: 100;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-  
+  max-width: 35vh;
+  display: none;
+  display: flex !important;
+  align-items: start;
+  position: absolute !important;
+  z-index: 100;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .submit {
@@ -205,3 +206,5 @@ table {
 .login-bg {
   background-color: rgba(226, 226, 229, 0.712);
 }
+
+
