changed agree to close on modals. fixed the case in one of the js file references. heroku is very particular

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -92,7 +92,7 @@
                   </table>
                 </div>
                 <div class="modal-footer">
-                  <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+                  <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
                 </div>
               </div>
             </div>
