--- a/views/underpar.handlebars
+++ b/views/underpar.handlebars
@@ -42,5 +42,5 @@
 
 <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
-<script src='/js/underpar.js'></script>
+<script src='/js/underPar.js'></script>
 <script src='/js/index.js'></script>
