--- a/views/partials/addProduct.handlebars
+++ b/views/partials/addProduct.handlebars
@@ -35,7 +35,7 @@
 
     </div>
     <div class="modal-footer">
-        <a href='#!class='center-align'' class='modal-close waves effect waves-green btn-flat'>Submit</a>
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+        <a id='submit-product' class='modal-close btn waves effect waves-green btn-flat'>Submit</a>
+        <a href="#!" class="modal-close waves-effect btn waves-green btn-flat">Close</a>
     </div>
 </div>
