--- a/views/partials/addOne.handlebars
+++ b/views/partials/addOne.handlebars
@@ -1,1 +1,1 @@
-<a id='{{this.id}}' class=" add btn-floating btn-small waves-effect waves-light red tooltipped" data-id='{{this.id}}' data-position="top" data-tooltip="Add to Pending Order"><i class="material-icons">add</i></a>
+<a class=" add btn-floating btn-small waves-effect waves-light red tooltipped" data-position="top" data-tooltip="Add to Pending Order"><i class="material-icons">add</i></a>
