--- a/views/partials/addProduct.handlebars
+++ b/views/partials/addProduct.handlebars
@@ -4,12 +4,14 @@
             <table class='highlight'>
                 <thead id='product-list' class='list-group'>
                     <tr>
+                        <th>ID</th>
                         <th>Name</th>
                         <th>Amount to Order</th>
                     </tr>
                 </thead>
-                <tbody data-id='{{this.id}}' class='list-group-item'>
+                <tbody id='product-to-submit'data-id='{{this.id}}' class='list-group-item'>
                     <tr>
+                        <td>{{this.prodID}}</td>
                         <td>{{this.prodName}}</td>
                         <td class="input-field col s10">
                             <input id="amtOrder" type="number" class="validate center-align">
@@ -39,3 +41,6 @@
         <a href="#!" class="modal-close waves-effect btn waves-green btn-flat">Close</a>
     </div>
 </div>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
+<script src='/js/productSubmit.js'></script>
