--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -101,4 +101,4 @@
 <script src='/js/index.js'></script>
 <script src='/js/categorySearch.js'></script>
 <script src='/js/productSearch.js'></script>
-<script src='/js/productSubmit.js'
+<script src='/js/productSubmit.js'></script>
