styling edits to order, underpar - cleaned up code passport

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -29,7 +29,7 @@
                   <td class='center-align'>{{this.prodUnitofIssue}}</td>
                   <td class='center-align'>{{> updateQuantity}}</td>
                   <td>
-                    <input id="{{this.id}}" type="text" class="input-field qtyRequested tooltipped" data-position="top" data-tooltip="Enter new quantity to request"
+                    <input id="{{this.id}}" type="text" class="input-field qtyRequested tooltipped center-align" data-position="top" data-tooltip="Enter new quantity to request"
                       value="{{this.olQuantity}}">
                   </td>
                   <td class='center-align'>{{this.usName}}</td>
