--- a/views/partials/addProduct.handlebars
+++ b/views/partials/addProduct.handlebars
@@ -8,9 +8,9 @@
                         <th>Amount to Order</th>
                     </tr>
                 </thead>
-                <tbody data-id='{{this.id}}' class='list-group-item'>
+                <tbody class='list-group-item'>
                     <tr>
-                        <td>{{this.prodName}}</td>
+                        <td id='prodid' data-id='{{this.id}}'>{{this.prodName}}</td>
                         <td class="input-field col s10">
                             <input id="amtOrder" type="number" class="validate center-align">
                         </td>
@@ -23,7 +23,7 @@
                         <th class='center-align'>Product PAR</th>
                     </tr>
                 </thead>
-                <tbody data-id='{{this.id}}' class='list-group-item'>
+                <tbody class='list-group-item'>
                     <tr>
                         <td class='center-align'>{{this.prodOnHand}}{{this.prodUnitofIssue}}</td>
                         <td class='center-align'>{{this.prodPAR}}{{this.prodUnitofIssue}}</td>
@@ -35,7 +35,7 @@
 
     </div>
     <div class="modal-footer">
-        <a href='#!class='center-align'' class='modal-close waves effect waves-green btn-flat'>Submit</a>
+        <a id="submit-product" href='#!class='center-align'' class='modal-close waves effect waves-green btn-flat'>Submit</a>
         <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
